--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "prop-types": "^15.8.1",
+    "proptypes": "^1.1.0",
     "re-chart": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
