--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "proptypes": "^1.1.0",
     "re-chart": "^1.0.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0",
