--- a/package.json
+++ b/package.json
@@ -33,5 +33,11 @@
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.7",
     "vite": "^5.3.4"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": false
   }
 }
