--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.4",
     "prop-types": "^15.8.1",
     "proptypes": "^1.1.0",
     "re-chart": "^1.0.0",
