--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.26.0",
     "recharts": "^2.12.7",
     "zustand": "^4.5.4"
