--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "axios": "^1.7.4",
+    "chart.js": "^4.4.4",
     "prop-types": "^15.8.1",
     "proptypes": "^1.1.0",
     "re-chart": "^1.0.0",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-minimal-pie-chart": "^8.4.0",
     "react-router-dom": "^6.26.0",
     "recharts": "^2.12.7",
     "zustand": "^4.5.4"
