--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.4",
     "formik": "^2.4.6",
     "prop-types": "^15.8.1",
