--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.53.3",
+    "@tanstack/react-query-devtools": "^5.54.0",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.4",
     "chart.js": "^4.4.4",
@@ -30,6 +32,7 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.53.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
